--- a/slides.Rmd
+++ b/slides.Rmd
@@ -2,6 +2,6 @@
 title: "Slides"
 ---
 
-Here are some INCREDIBLY ROUGH slides that give high-level intro, before live-coding.
+Selected slides I've shown before and during live-coding in class.
 
-<script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script> <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="purrr tutorial intro VERY ROUGH DRAFT" target="_blank">purrr tutorial intro VERY ROUGH DRAFT</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong> </div>
+<script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script> <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong> </div>
