--- a/slides.Rmd
+++ b/slides.Rmd
@@ -2,6 +2,8 @@
 title: "Slides"
 ---
 
+*These are not slides from a talk!*
+
 Selected slides I've shown before and during live-coding in class.
 
 <script async class="speakerdeck-embed" data-id="f60c9022c5824c0994cd3ec558820daf" data-ratio="1.33333333333333" src="//speakerdeck.com/assets/embed.js"></script> <div style="margin-bottom:5px"> <strong> <a href="https://speakerdeck.com/jennybc/purrr-tutorial-intro-very-rough-draft" title="some purrr teaching slides" target="_blank">some purrr teaching slides</a> </strong> from <strong><a href="https://speakerdeck.com/jennybc" target="_blank">Jennifer Bryan</a></strong> </div>
